bpo-28603 Always print chained exceptions in PyErr_Display()

Previously when printing an exception traceback in PyErr_Display(), it
would stop traversing the context/cause chain when it encountered an
exception that was either unhashable or compared equal to one already
seen in the chain. With this change, we only stop traversing the chain
when we encounter the same exception object again (indicating a loop.)